--- a/internal/web/components/css.html
+++ b/internal/web/components/css.html
@@ -1,3 +1,3 @@
-<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
-<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+<link rel="stylesheet" href="/static/spectre.min.css">
+<link rel="stylesheet" href="/static/spectre-icons.min.css">
 <link rel="stylesheet" href="/static/style.css">
