frontend fixes and works

--- a/internal/web/components/css.html
+++ b/internal/web/components/css.html
@@ -1,3 +1,11 @@
-<link rel="stylesheet" href="/static/spectre.min.css">
-<link rel="stylesheet" href="/static/spectre-icons.min.css">
+<link
+	rel="stylesheet" type="text/css" title="Light"
+	href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css"
+>
+<link
+	rel="alternate stylesheet" type="text/css" title="Dark"
+	href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-dark.min.css"
+>
 <link rel="stylesheet" href="/static/style.css">
+<link rel="stylesheet" href="/static/switch.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
