--- a/internal/web/components/errorbox.html
+++ b/internal/web/components/errorbox.html
@@ -2,7 +2,7 @@
 
 <input type="checkbox" id="error-dialog" class="modal">
 <div role="dialog" aria-lebelledby="error-dialog-title">
-	<div class="card error">
+	<div class="card large">
 		<label for="error-dialog" class="modal-close"></label>
 		<h3 class="section" id="error-dialog-title">Full Error</h3>
 		<pre class="section">{{ .Error }}</p>
